--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="assets\favicons\apple-touch-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="assets\favicons\apple-touch-icon-76x76.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="assets\favicons\apple-touch-icon-114x114.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>kalyanjit.das</title>
 </head>
 
@@ -232,7 +232,7 @@
 
 
 
-<script src="canvas.js"></script>    
+<script src="/js/canvas.js"></script>    
 
 </body>
 
