--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg" id="nav-section">
+        <nav class="navbar navbar-expand-lg " id="nav-section">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -138,13 +138,13 @@
             <div class="row">
 
                 <div class="col-lg-6 col-md-6 col-sm-12 profile " style="padding-left: 2%;">
-                    <p class="heading" style="margin-top: -12%;">What are my <span class="highlight profile-highlight">Skills!</span>
+                    <p class="heading">What are my <span class="highlight profile-highlight">Skills!</span>
                     </p>
                     <hr class="hr-below-nav" style="width: 40%;">
                     <br><br>
                     <div class="progress-section">
                         <div class="bar">
-                            <div class="bar-fill" style="width: 90%;">
+                            <div class="bar-fill" style="width: 87%;">
                                 <p class="bar-text">HTML</p>
                             </div>
                             <p class="bar-text">90%</p>
@@ -181,7 +181,7 @@
                             <p class="bar-text">30%</p>
                         </div>
                         <div class="bar">
-                            <div class="bar-fill" style="width: 94%;">
+                            <div class="bar-fill" style="width: 90%;">
                                 <p class="bar-text" >BOOTSTRAP</p>
                             </div>
                             <p class="bar-text">95%</p>
