--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bonbon&display=swap" rel="stylesheet">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
@@ -28,6 +32,15 @@
     <link rel="apple-touch-icon" sizes="76x76" href="assets\favicons\apple-touch-icon-76x76.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="assets\favicons\apple-touch-icon-114x114.png" />
     <link rel="stylesheet" href="/css/style.css" />
+
+    <!-- animate css link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!-- onscroll animation css -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- onscroll animation js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>kalyanjit.das</title>
 </head>
 
@@ -75,7 +88,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="#portfolio-section">
                                 <p class="nav-btnn">Portfolio</p>
                             </a>
                         </li>
@@ -106,7 +119,7 @@
                     </p>
                     <hr class="hr-below-nav" style="width: 40%;">
                     <br>
-                    <p class="profile-body">
+                    <p data-aos="fade-left" class="profile-body">
 
                         I'm a student Of Chandigarh University located at Mohali, Punjab.
                         Currently persuing Bachelor of Technology in Computer Science. A part from this I'm a
@@ -115,13 +128,13 @@
                         I have extensive experience in creating modern, creative and responsive Android and Web
                         Application from scratch.
                         <br><br>
-                        <span class="highlight profile-highlight"><i
+                        <span data-aos="fade-left" class="highlight profile-highlight"><i
                                 class="fas fa-drafting-compass"></i>&nbsp;Designing</span><br>
 
                         I breathe design and creativity.I am also passionate about coding too. My knowledge and
                         experience consists of research, Designing, Development, testing and Deployment.
                         <br><br>
-                        <span class="highlight profile-highlight">&nbsp;<i
+                        <span data-aos="fade-left" class="highlight profile-highlight">&nbsp;<i
                                 class="fas fa-cogs"></i>&nbsp;Specialisation</span><br>
 
                         I have specialisation in Front-end development and User experience . I have obtained an eye for
@@ -136,71 +149,72 @@
 
         <div class="container-fluid" id="skills-section">
             <div class="row">
-
                 <div class="col-lg-6 col-md-6 col-sm-12 profile " style="padding-left: 2%;">
-                    <p class="heading">What are my <span class="highlight profile-highlight">Skills!</span>
+                    <p data-aos="fade-right" class="heading">What are my <span
+                            class="highlight profile-highlight">Skills!</span>
                     </p>
-                    <hr class="hr-below-nav" style="width: 40%;">
+                    <hr data-aos="fade-left" data-aos-offset="300" data-aos-duration="500" class="hr-below-nav"
+                        style="width: 40%;">
                     <br><br>
                     <div class="progress-section">
-                        <div class="bar">
+                        <div data-aos="fade-right" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 87%;">
                                 <p class="bar-text">HTML</p>
                             </div>
                             <p class="bar-text">90%</p>
                         </div>
 
-                        <div class="bar">
+                        <div data-aos="fade-left" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 80%;">
-                                <p class="bar-text" >CSS</p>
+                                <p class="bar-text">CSS</p>
                             </div>
                             <p class="bar-text">80%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-right" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 60%;">
-                                <p class="bar-text" >JAVASCRIPT</p>
+                                <p class="bar-text">JAVASCRIPT</p>
                             </div>
                             <p class="bar-text">60%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-left" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 70%;">
-                                <p class="bar-text" >PHP</p>
+                                <p class="bar-text">PHP</p>
                             </div>
                             <p class="bar-text">70%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-right" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 80%;">
-                                <p class="bar-text" >MYSQl</p>
+                                <p class="bar-text">MYSQl</p>
                             </div>
                             <p class="bar-text">80%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-left" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 30%;">
-                                <p class="bar-text" >React</p>
+                                <p class="bar-text">React</p>
                             </div>
                             <p class="bar-text">30%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-right" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 90%;">
-                                <p class="bar-text" >BOOTSTRAP</p>
+                                <p class="bar-text">BOOTSTRAP</p>
                             </div>
                             <p class="bar-text">95%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-left" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 65%;">
-                                <p class="bar-text" >KOTLIN</p>
+                                <p class="bar-text">KOTLIN</p>
                             </div>
                             <p class="bar-text">65%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-right" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 80%;">
-                                <p class="bar-text" >XML</p>
+                                <p class="bar-text">XML</p>
                             </div>
                             <p class="bar-text">80%</p>
                         </div>
-                        <div class="bar">
+                        <div data-aos="fade-left" class="bar" onmouseover="mouseoversound.playclip()">
                             <div class="bar-fill" style="width: 20%;">
-                                <p class="bar-text" >FIREBASE</p>
+                                <p class="bar-text">FIREBASE</p>
                             </div>
                             <p class="bar-text">20%</p>
                         </div>
@@ -211,28 +225,79 @@
 
                 <div class="col-lg-6 col-md-6 col-sm-12" style="text-align: center;">
                     <div class="comb-container container" style="text-align: center;">
-                    
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb"><br>
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
-                        <img class="honey-comb" src="/assets/images/honey-comb.png" alt="honey-comb">
+
+                        <section class="hexagon-gallery">
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/photshop.svg" alt="photoshop image"></div>
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/illustrator.svg" alt="illustrator image"></div>
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/indesign-cc.svg" alt="indesign image"></div>
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/guitar.svg" alt="Guitar image"></div>
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/camera.svg" alt="Camera image"></div>
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/canva-seeklogo.com.svg" alt="canva image"> </div>
+                            <div class="hex" onmouseover="mouseoversound.playclip()"><img class="hex-img"
+                                    src="/assets/images/painting1.svg" alt="canva image"> </div>
+
+                        </section>
 
                     </div>
-
                 </div>
 
 
             </div>
         </div>
+
+        <div class="container-fluid" id="portfolio-section">
+
+            <div class="portfolio-container">
+
+                <p class="heading heading-portfolio">My <span class="highlight profile-highlight">Projects</span>
+                </p>
+                <hr data-aos="fade-left" data-aos-offset="300" data-aos-duration="500" class="hr-below-nav"
+                style="width: 20%;">
+                <div class="row">
+
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+
+                        <div class="card" style="margin-right: 0;">
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="card" style="margin-left: 0;">
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
     </div>
 
 
+    <script src="/js/hoverSound.js"></script>
+    <script src="/js/canvas.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
-<script src="/js/canvas.js"></script>    
 
 </body>
 
