--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <hr class="hr-below-nav" style="width: 40%;">
                 <br>
                 <p data-aos="fade-left" class="texttype1">
-
+                    update 1
                     I'm a student Of Chandigarh University located at Mohali, Punjab.
                     Currently persuing Bachelor of Technology in Computer Science. A part from this I'm a
                     Self-Taught Developer.
