--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
     <title>kalyanjit.das</title>
 </head>
 
-<body data-bs-spy='scroll' data-bs-target='#nav-section' class="scrollspy-example">
+<body>
     <section class="landing-section">
         <div class="element" id="home-section">
             <canvas id="bgCanvas"></canvas>
