--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style_test.css">
+    <link rel="stylesheet" href="/Kalyanjitdas.github.io/css/style.css">
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -25,10 +25,10 @@
     </script>
 
     <!-- fav-icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets\favicons\apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets\favicons\favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets\favicons\favicon-16x16.png">
-    <link rel="manifest" href="assets\favicons\site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Kalyanjitdas.github.io/assets\favicons\apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Kalyanjitdas.github.io/assets\favicons\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Kalyanjitdas.github.io/assets\favicons\favicon-16x16.png">
+    <link rel="manifest" href="/Kalyanjitdas.github.io/assets\favicons\site.webmanifest">
 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
@@ -69,7 +69,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav">
                     <a class="navbar-brand" href="#">
-                        <img src="/assets/images/kalyanjit-logo3.png" class="navbar-brandd" alt="navbar-brand"
+                        <img src="/Kalyanjitdas.github.io/assets/images/kalyanjit-logo3.png" class="navbar-brandd" alt="navbar-brand"
                             width="40" height="40">
                     </a>
                     <li class="nav-item ">
@@ -156,8 +156,8 @@
                 <div class="about-content-box">
 
                     <div class="my-image">
-                        <img src="/assets/images/kalyanjit-portfolio-1.png" alt="My Image">
-                        <a href="/assets/my resume/resume-final.pdf" download="Kalyanjit's Resume">
+                        <img src="/Kalyanjitdas.github.io/assets/images/kalyanjit-portfolio-1.png" alt="My Image">
+                        <a href="/Kalyanjitdas.github.io/assets/my resume/resume-final.pdf" download="Kalyanjit's Resume">
                             <div class="my-resume">
                                 <p class="texttype1">Download My Resume</p>
                             </div>
@@ -222,23 +222,23 @@
         </div>
         <div class="skill-containers">
             <section class="hexagon-gallery">
-                <div data-aos="fade-down-right" class="hex"><img class="hex-img" src="/assets/images/photshop.svg"
+                <div data-aos="fade-down-right" class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/photshop.svg"
                         alt="photoshop image"></div>
-                <div data-aos="fade-down-left" class="hex"><img class="hex-img" src="/assets/images/illustrator.svg"
+                <div data-aos="fade-down-left" class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/illustrator.svg"
                         alt="illustrator image">
                 </div>
-                <div data-aos="fade-right" class="hex"><img class="hex-img" src="/assets/images/indesign-cc.svg"
+                <div data-aos="fade-right" class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/indesign-cc.svg"
                         alt="indesign image">
                 </div>
-                <div data-aos="fade-up-right" class="hex"><img class="hex-img" src="/assets/images/guitar.svg"
+                <div data-aos="fade-up-right" class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/guitar.svg"
                         alt="Guitar image">
                 </div>
-                <div class="hex"><img class="hex-img" src="/assets/images/camera.svg" alt="Camera image">
+                <div class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/camera.svg" alt="Camera image">
                 </div>
-                <div data-aos="fade-left" class="hex"><img class="hex-img" src="/assets/images/canva-seeklogo.com.svg"
+                <div data-aos="fade-left" class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/canva-seeklogo.com.svg"
                         alt="canva image">
                 </div>
-                <div data-aos="fade-up-left" class="hex"><img class="hex-img" src="/assets/images/painting1.svg"
+                <div data-aos="fade-up-left" class="hex"><img class="hex-img" src="/Kalyanjitdas.github.io/assets/images/painting1.svg"
                         alt="canva image">
                 </div>
             </section>
@@ -250,7 +250,7 @@
 
         <div class="project-container">
             <div class="project-card" data-aos="fade-right">
-                <img src="/assets/images/portfolio-website-ss-3.png" />
+                <img src="/Kalyanjitdas.github.io/assets/images/portfolio-website-ss-3.png" />
                 <div class="after">
                     <a href="#home-section">
                         <p>Take a tour</p>
@@ -258,7 +258,7 @@
                 </div>
             </div>
             <div class="project-card" data-aos="fade-left">
-                <img src="/assets/images/triptoe-image.PNG" />
+                <img src="/Kalyanjitdas.github.io/assets/images/triptoe-image.PNG" />
                 <div class="after">
                     <a href="http://triptoe.epizy.com/" target="blank">
                         <p>Take a tour</p>
@@ -266,7 +266,7 @@
                 </div>
             </div>
             <div class="project-card" data-aos="fade-right">
-                <img src="/assets/images/coming soon.png" />
+                <img src="/Kalyanjitdas.github.io/assets/images/coming soon.png" />
                 <div class="after">
                     <a href="#">
                         <p>Take a tour</p>
@@ -315,8 +315,8 @@
     </footer>
 
 
-    <script src="/js/canvas.js"></script>
-    <script src="/js/form.js"></script>
+    <script src="/Kalyanjitdas.github.io/js/canvas.js"></script>
+    <script src="/Kalyanjitdas.github.io/js/form.js"></script>
     <script>
         var app = document.getElementById('app');
 
