--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <br>
                         <p data-aos="fade-left" class="texttype1">
                             I'm a student Of Chandigarh University located at Mohali, Punjab.
-                            Currently persuing Bachelor of Technology in Computer Science. A part from this I'm a
+                            Currently pursuing Bachelor of Technology in Computer Science. A part from this I'm a
                             Self-Taught Developer.
                             I am a certified Android Developer and a Full Stack Web Developer too.
                             I have extensive experience in creating modern, creative and responsive Android and Web
@@ -132,7 +132,7 @@
 
                                     I breathe design and creativity. I am also passionate about coding too. My knowledge
                                     and
-                                    experience consists of research, Designing, Development, testing and Deployment.I
+                                    experience consist of research, Designing, Development, Testing and Deployment. I
                                     have
                                     serious passion for UI effects, creating intuitive and dynamic user experiences.
                                 </P>
@@ -142,11 +142,11 @@
                                     <span data-aos="fade-left" class="highlight about-me-cards-title ">&nbsp;<i
                                             class="fas fa-cogs"></i>&nbsp;Specialisation</span><br><br>
 
-                                    I have specialisation in Front-end development and User experience . I have obtained
+                                    I have specialisation in Front-end development and User experience. I have obtained
                                     an
                                     eye for
                                     detail and appreciation for design, knowledge of integrating the UI and developing
-                                    server-side.I
+                                    server-side. I
                                     have vast experience of knowing, how to efficiently manage projects and team
                                     successfully.
                                 </p>
